--- a/templates/child-dashboard/base.html.twig
+++ b/templates/child-dashboard/base.html.twig
@@ -33,6 +33,7 @@
                             {% block left_page %}{% endblock %}
                         </div>
                         <div class="right-page six wide column">
+                            <h1>{% block right_page_title %}{% endblock %}</h1>
                             {% block right_page %}{% endblock %}
                         </div>
                         <div class="right-margin two wide column">
