--- a/templates/parent-dashboard/base.html.twig
+++ b/templates/parent-dashboard/base.html.twig
@@ -223,7 +223,7 @@ desired effect
                 <!-- Fin onglet enfant -->
 
                 <!-- Onglet Quêtes -->
-                <li class=" {% if currentPath is same as(path('dashboard-quests')) %}active{% endif %}"><a href="{{ path('dashboard-quests') }}"><i class="fa fa-trophy"></i> <span>Quêtes</span></a></li>
+                <li class=" {% if currentPath is same as(path('dashboard-quests')) %}active{% endif %}"><a href="{{ path('dashboard-quests') }}"><i class="fa fa-book"></i> <span>Quêtes</span></a></li>
 
 
                 <!-- Onglet Récompenses perso -->
