--- a/templates/parent-dashboard/pages/custom-rewards.html.twig
+++ b/templates/parent-dashboard/pages/custom-rewards.html.twig
@@ -1,7 +1,7 @@
 {% extends 'parent-dashboard/base.html.twig' %}
 
     {% block pagetitle %}
-        Récompenses personnalisées
+        Récompenses personnalisées <i class="fa fa-info-circle" title="Créez de réelles récompenses que votre enfant pourra échager contre des pièces d'or, obtenues en réalisant des quêtes"></i>
     {% endblock pagetitle %}
 
 {% block content %}
@@ -12,7 +12,7 @@
             <div class="col-md-9">
                 <div class="nav-tabs-custom">
                     <ul class="nav nav-tabs">
-                        <li class="active"><a href="#my-rewards" data-toggle="tab">Récompenses personnaliées</a></li>
+                        <li class="active"><a href="#my-rewards" data-toggle="tab">Récompenses personnalisées</a></li>
                         <li><a href="#create-reward" data-toggle="tab"><i class="fa fa-plus"></i></a></li>
                     </ul>
                     <div class="tab-content">
