--- a/templates/child-dashboard/includes/reward-card.html.twig
+++ b/templates/child-dashboard/includes/reward-card.html.twig
@@ -64,6 +64,9 @@
                 .then(r => r.json())
                 .then(r => {
                     alert(r.message);
+                    if (r.code === 200) {
+                        document.location.reload();
+                    }
                 });
         }
     }
