--- a/templates/child-dashboard/pages/quests.html.twig
+++ b/templates/child-dashboard/pages/quests.html.twig
@@ -6,7 +6,7 @@
 
     <div class="quests-page">
         <div class="ui accordion">
-            {% for q in child.quests if q.status == 1 %}
+            {% for q in child.quests  | filter(q => q.status == 1)  %}
                 {% include 'child-dashboard/includes/quest-card.html.twig' with {'quest': q} %}
             {% endfor %}
         </div>
