--- a/templates/parent-dashboard/base.html.twig
+++ b/templates/parent-dashboard/base.html.twig
@@ -321,6 +321,11 @@ desired effect
 <!-- AdminLTE App -->
 <script src="{{ asset('dist/js/adminlte.min.js', 'parent_dashboard') }}"></script>
 
+{#<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>#}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+
+
 {% block script %}
 {% endblock %}
 
