Fix double login (Child/Parent User)

--- a/templates/home/pages/home.html.twig
+++ b/templates/home/pages/home.html.twig
@@ -16,7 +16,7 @@
 
 {#            </div>#}
             
-            <a href="{{ path('quest-book') }}" id="quest-book-btn" class="ui circular inverted button" title="Ouvrir mon journal de quêtes">
+            <a href="{{ path('ouvrir-journal') }}" id="quest-book-btn" class="ui circular inverted button" title="Ouvrir mon journal de quêtes">
                 <img src="{{ asset('book_icon.PNG', 'home_img') }}" alt="Image livre">
             </a>
         </div>
