--- a/templates/child-dashboard/pages/profile.html.twig
+++ b/templates/child-dashboard/pages/profile.html.twig
@@ -16,7 +16,7 @@
 
         <div class="profile">
             <div class="profile-img">
-                <img class="ui medium circular image" src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/King-512.png" alt="">
+                <img class="ui medium circular image" src="{{ child.profileimage.url }}" alt="">
             </div>
 
             <div class="profile-infos">
