--- a/templates/child-dashboard/pages/quests.html.twig
+++ b/templates/child-dashboard/pages/quests.html.twig
@@ -38,4 +38,5 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/accordion.min.js"></script>
+    <script src="{{ asset('js/api.js', 'quest-book') }}"></script>
 {% endblock %}
