--- a/templates/child-dashboard/includes/reward-card.html.twig
+++ b/templates/child-dashboard/includes/reward-card.html.twig
@@ -3,7 +3,7 @@
 {#</div>#}
 
 {#<div class="ui accordion">#}
-<div class="reward-card four wide column" id="quest-card-{{ reward.id }}" onclick="buyItem({{ reward.id }})">
+<div class="reward-card eight wide column" id="quest-card-{{ reward.id }}" onclick="buyItem({{ reward.id }})">
     <div class="title">
         <img class="ui middle aligned mini image" src="{{ r.image }}" alt="Image">
         {{ reward.name }}
@@ -45,29 +45,3 @@
         padding-left: 20px;
     }
 </style>
-
-<script>
-
-    function buyItem(rewardId) {
-        // var xhttp = new XMLHttpRequest();
-        // xhttp.onreadystatechange = function() {
-        //     if (this.readyState === 4 && this.status === 200) {
-        //         console.log('oui');
-        //     }
-        // };
-        // xhttp.open('GET', '/api/c/return/'+questId, true);
-        // xhttp.send();
-
-        if (confirm("Acheter cette récompense ?")) {
-
-            window.fetch('/api/c/buy/'+rewardId)
-                .then(r => r.json())
-                .then(r => {
-                    alert(r.message);
-                    if (r.code === 200) {
-                        document.location.reload();
-                    }
-                });
-        }
-    }
-</script>
