Del compte Enfant OK, Err creation quête sans enfant FIX

--- a/templates/parent-dashboard/pages/my-children.html.twig
+++ b/templates/parent-dashboard/pages/my-children.html.twig
@@ -26,7 +26,7 @@
                     <!-- Add the bg color to the header using any of the bg-* classes -->
                         <div class="widget-user-header bg-aqua">
                             <div class="widget-user-image">
-                                <img class="img-circle" src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/King-512.png" alt="Child Avatar">
+                                <img class="img-circle" src="{{ c.profileImage.url }}" alt="Child Avatar">
                             </div>
                             <!-- /.widget-user-image -->
                             <h3 class="widget-user-username">{{ c.name }}</h3>
