--- a/templates/parent-dashboard/pages/one-child.html.twig
+++ b/templates/parent-dashboard/pages/one-child.html.twig
@@ -19,7 +19,7 @@
                 <div class="box box-primary">
                     <div class="box-body box-profile">
 {#                        <img class="profile-user-img img-responsive img-circle" src="{{ asset('dist/img/user4-128x128.jpg', 'parent_dashboard') }}" alt="User profile picture">#}
-                        <img class="profile-user-img img-responsive img-circle" src="https://cdn3.iconfinder.com/data/icons/fantasy-and-role-play-game-adventure-quest/512/King-512.png" alt="User profile picture">
+                        <img class="profile-user-img img-responsive img-circle" src="{{ child.profileImage.url }}" alt="User profile picture">
 
                         <h3 class="profile-username text-center">{{ child.name }}</h3>
 
@@ -163,106 +163,12 @@
 
                         <!-- ONGLET AUTRE CHOSE -->
                         <div class="tab-pane" id="timeline">
-{#                            <!-- The timeline -->#}
-{#                            <ul class="timeline timeline-inverse">#}
-{#                                <!-- timeline time label -->#}
-{#                                <li class="time-label">#}
-{#                                    <span class="bg-red">#}
-{#                                      10 Feb. 2014#}
-{#                                    </span>#}
-{#                                </li>#}
-{#                                <!-- /.timeline-label -->#}
-{#                                <!-- timeline item -->#}
-{#                                <li>#}
-{#                                    <i class="fa fa-envelope bg-blue"></i>#}
-{##}
-{#                                    <div class="timeline-item">#}
-{#                                        <span class="time"><i class="fa fa-clock-o"></i> 12:05</span>#}
-{##}
-{#                                        <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>#}
-{##}
-{#                                        <div class="timeline-body">#}
-{#                                            Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,#}
-{#                                            weebly ning heekya handango imeem plugg dopplr jibjab, movity#}
-{#                                            jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle#}
-{#                                            quora plaxo ideeli hulu weebly balihoo...#}
-{#                                        </div>#}
-{#                                        <div class="timeline-footer">#}
-{#                                            <a class="btn btn-primary btn-xs">Read more</a>#}
-{#                                            <a class="btn btn-danger btn-xs">Delete</a>#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                </li>#}
-{#                                <!-- END timeline item -->#}
-{#                                <!-- timeline item -->#}
-{#                                <li>#}
-{#                                    <i class="fa fa-user bg-aqua"></i>#}
-{##}
-{#                                    <div class="timeline-item">#}
-{#                                        <span class="time"><i class="fa fa-clock-o"></i> 5 mins ago</span>#}
-{##}
-{#                                        <h3 class="timeline-header no-border"><a href="#">Sarah Young</a> accepted your friend request#}
-{#                                        </h3>#}
-{#                                    </div>#}
-{#                                </li>#}
-                                <!-- END timeline item -->
-                                <!-- timeline item -->
-{#                                <li>#}
-{#                                    <i class="fa fa-comments bg-yellow"></i>#}
-
-{#                                    <div class="timeline-item">#}
-{#                                        <span class="time"><i class="fa fa-clock-o"></i> 27 mins ago</span>#}
-
-{#                                        <h3 class="timeline-header"><a href="#">Jay White</a> commented on your post</h3>#}
-
-{#                                        <div class="timeline-body">#}
-{#                                            Take me to your leader!#}
-{#                                            Switzerland is small and neutral!#}
-{#                                            We are more like Germany, ambitious and misunderstood!#}
-{#                                        </div>#}
-{#                                        <div class="timeline-footer">#}
-{#                                            <a class="btn btn-warning btn-flat btn-xs">View comment</a>#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                </li>#}
-{#                                <!-- END timeline item -->#}
-{#                                <!-- timeline time label -->#}
-{#                                <li class="time-label">#}
-{#                        <span class="bg-green">#}
-{#                          3 Jan. 2014#}
-{#                        </span>#}
-{#                                </li>#}
-{#                                <!-- /.timeline-label -->#}
-{#                                <!-- timeline item -->#}
-{#                                <li>#}
-{#                                    <i class="fa fa-camera bg-purple"></i>#}
-
-{#                                    <div class="timeline-item">#}
-{#                                        <span class="time"><i class="fa fa-clock-o"></i> 2 days ago</span>#}
-
-{#                                        <h3 class="timeline-header"><a href="#">Mina Lee</a> uploaded new photos</h3>#}
-
-{#                                        <div class="timeline-body">#}
-{#                                            <img src="http://placehold.it/150x100" alt="..." class="margin">#}
-{#                                            <img src="http://placehold.it/150x100" alt="..." class="margin">#}
-{#                                            <img src="http://placehold.it/150x100" alt="..." class="margin">#}
-{#                                            <img src="http://placehold.it/150x100" alt="..." class="margin">#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                </li>#}
-{#                                <!-- END timeline item -->#}
-{#                                <li>#}
-{#                                    <i class="fa fa-clock-o bg-gray"></i>#}
-{#                                </li>#}
-{#                            </ul>#}
                         </div>
                         <!-- /.tab-pane -->
 
 
                         <!-- ONLGET OPTIONS -->
                         <div class="tab-pane" id="settings">
-{#                            <form class="form-horizontal">#}
-
 
                                 <div class="box box-success">
                                     <div class="box-body">
@@ -282,6 +188,13 @@
                                         {{ form_end(childForm) }}
 
                                     </div>
+                                </div>
+
+                                <div >
+{#                                    <div class="box body">#}
+
+                                    <button type="submit" value="" class="btn btn-danger" onclick="deleteChildAccount({{ child.id }})">Supprimer ce comtpe Enfant</button>
+{#                                    </div>#}
                                 </div>
 {#                                <div class="form-group">#}
 {#                                    <label for="inputName" class="col-sm-2 control-label">Name</label>#}
