--- a/templates/parent-dashboard/pages/one-child.html.twig
+++ b/templates/parent-dashboard/pages/one-child.html.twig
@@ -18,7 +18,6 @@
                 <!-- Profile Image -->
                 <div class="box box-primary">
                     <div class="box-body box-profile">
-{#                        <img class="profile-user-img img-responsive img-circle" src="{{ asset('dist/img/user4-128x128.jpg', 'parent_dashboard') }}" alt="User profile picture">#}
                         <img class="profile-user-img img-responsive img-circle" src="{{ child.profileImage.url }}" alt="User profile picture">
 
                         <h3 class="profile-username text-center">{{ child.name }}</h3>
@@ -44,52 +43,9 @@
                                 <b>Quêtes réalisées</b> <a class="pull-right">{{ realisedQuests }}</a>
                             </li>
                         </ul>
-
-{#                        <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>#}
                     </div>
                     <!-- /.box-body -->
                 </div>
-                <!-- /.box -->
-
-                <!-- About Me Box -->
-{#                <div class="box box-primary">#}
-{#                    <div class="box-header with-border">#}
-{#                        <h3 class="box-title">About Me</h3>#}
-{#                    </div>#}
-{#                    <!-- /.box-header -->#}
-{#                    <div class="box-body">#}
-{#                        <strong><i class="fa fa-book margin-r-5"></i> Education</strong>#}
-
-{#                        <p class="text-muted">#}
-{#                            B.S. in Computer Science from the University of Tennessee at Knoxville#}
-{#                        </p>#}
-
-{#                        <hr>#}
-
-{#                        <strong><i class="fa fa-map-marker margin-r-5"></i> Location</strong>#}
-
-{#                        <p class="text-muted">Malibu, California</p>#}
-
-{#                        <hr>#}
-
-{#                        <strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>#}
-
-{#                        <p>#}
-{#                            <span class="label label-danger">UI Design</span>#}
-{#                            <span class="label label-success">Coding</span>#}
-{#                            <span class="label label-info">Javascript</span>#}
-{#                            <span class="label label-warning">PHP</span>#}
-{#                            <span class="label label-primary">Node.js</span>#}
-{#                        </p>#}
-
-{#                        <hr>#}
-
-{#                        <strong><i class="fa fa-file-text-o margin-r-5"></i> Notes</strong>#}
-
-{#                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum enim neque.</p>#}
-{#                    </div>#}
-{#                    <!-- /.box-body -->#}
-{#                </div>#}
                 <!-- /.box -->
             </div>
             <!-- /.col -->
@@ -97,7 +53,7 @@
                 <div class="nav-tabs-custom">
                     <ul class="nav nav-tabs">
                         <li class="active"><a href="#activity" data-toggle="tab">Dernières quêtes</a></li>
-                        <li><a href="#timeline" data-toggle="tab">Autre chose</a></li>
+{#                        <li><a href="#timeline" data-toggle="tab">Autre chose</a></li>#}
                         <li><a href="#settings" data-toggle="tab"><i class="fa fa-gear"></i></a></li>
                     </ul>
                     <div class="tab-content">
@@ -110,7 +66,6 @@
                                     <!-- Quete -->
                                     <div class="post" id="quest-post-{{ q.id }}">
                                         <div class="user-block">
-{#                                            <img class="img-circle img-bordered-sm" src="" alt="status" style="background-color: red">#}
 
                                             {% set questStatus = qs.statusByNumber(q.status) %}
                                             <span class="quest-status {{ questStatus.colorclass }}"><i class="{{ questStatus.icon }}"></i></span>
@@ -162,8 +117,8 @@
                         <!-- /.tab-pane -->
 
                         <!-- ONGLET AUTRE CHOSE -->
-                        <div class="tab-pane" id="timeline">
-                        </div>
+{#                        <div class="tab-pane" id="timeline">#}
+{#                        </div>#}
                         <!-- /.tab-pane -->
 
 
@@ -190,57 +145,9 @@
                                     </div>
                                 </div>
 
-                                <div >
-{#                                    <div class="box body">#}
-
+                                <div>
                                     <button type="submit" value="" class="btn btn-danger" onclick="deleteChildAccount({{ child.id }})">Supprimer ce comtpe Enfant</button>
-{#                                    </div>#}
                                 </div>
-{#                                <div class="form-group">#}
-{#                                    <label for="inputName" class="col-sm-2 control-label">Name</label>#}
-
-{#                                    <div class="col-sm-10">#}
-{#                                        <input type="email" class="form-control" id="inputName" placeholder="Name">#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                                <div class="form-group">#}
-{#                                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>#}
-
-{#                                    <div class="col-sm-10">#}
-{#                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email">#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                                <div class="form-group">#}
-{#                                    <label for="inputName" class="col-sm-2 control-label">Name</label>#}
-
-{#                                    <div class="col-sm-10">#}
-{#                                        <input type="text" class="form-control" id="inputName" placeholder="Name">#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                                <div class="form-group">#}
-{#                                    <label for="inputExperience" class="col-sm-2 control-label">Experience</label>#}
-
-{#                                    <div class="col-sm-10">#}
-{#                                        <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                                <div class="form-group">#}
-{#                                    <label for="inputSkills" class="col-sm-2 control-label">Skills</label>#}
-
-{#                                    <div class="col-sm-10">#}
-{#                                        <input type="text" class="form-control" id="inputSkills" placeholder="Skills">#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                                <div class="form-group">#}
-{#                                    <div class="col-sm-offset-2 col-sm-10">#}
-{#                                        <div class="checkbox">#}
-{#                                            <label>#}
-{#                                                <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>#}
-{#                                            </label>#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                            </form>#}
                         </div>
                         <!-- /.tab-pane -->
                     </div>
