--- a/public/assets/quest-book/css/main.css
+++ b/public/assets/quest-book/css/main.css
@@ -2,6 +2,8 @@ html {
 
 }
 
+
+
 body {
     /*background-image: url("../img/space_bg.jpg");*/
     min-height: 100vh;
@@ -19,10 +21,6 @@ body {
 div.container {
     height: 100%;
     margin: 40px;
-}
-
-@media all and (min-width: 1200px) {
-
 }
 
 div#quest-book {
@@ -79,4 +77,35 @@ div.left-margin {
 
 .fail {
     color: #A41E1C;
+}
+
+@media all and (max-width: 1300px){
+    .container { margin: 0 !important;}
+}
+
+@media all and (max-width: 960px){
+    body {
+        min-width: 0 !important;
+        background: none;
+    }
+    div#quest-book {
+        background: none;
+        /*background: url("../img/book.png") no-repeat center top;*/
+        /*-webkit-background-size: cover;*/
+        /*-moz-background-size: cover;*/
+        /*-o-background-size: cover;*/
+        /*background-size: contain;*/
+        /*background-size: 100% auto;*/
+        /*background-origin: content-box;*/
+        /*height: 100%;*/
+        /*padding: 50px;*/
+    }
+
+    i {
+
+    }
+
+    .left-margin, .right-margin {
+        /*display: none !important;*/
+    }
 }
