--- a/templates/child-dashboard/base.html.twig
+++ b/templates/child-dashboard/base.html.twig
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Journal de quêtes{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"  type="text/css" />
