--- a/templates/child-dashboard/includes/mobile-menu.html.twig
+++ b/templates/child-dashboard/includes/mobile-menu.html.twig
@@ -20,6 +20,8 @@
     .mobile-menu-container {
         width: 100%;
         height: 50px;
+        /*position: fixed;*/
+        top:0;
     }
 
     .mobile-menu-container>a {
