--- a/templates/security/lostpassword-email.html.twig
+++ b/templates/security/lostpassword-email.html.twig
@@ -431,14 +431,14 @@
                                     <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 15px; padding-bottom: 10px; font-family: Arial, sans-serif"><![endif]-->
                                     <div style="color:#555555;font-family:Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height:150%;padding-top:15px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
                                         <div style="line-height: 18px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 12px; color: #555555;">
-                                            <p style="line-height: 25px; text-align: left; font-size: 12px; margin: 0;"><span style="font-size: 17px; mso-ansi-font-size: 18px;">Merci de votre inscription sur le site SITE</span></p>
+                                            <p style="line-height: 25px; text-align: left; font-size: 12px; margin: 0;"><span style="font-size: 17px; mso-ansi-font-size: 18px;">Vous avez perdu votre mot de passe ?</span></p>
                                         </div>
                                     </div>
                                     <!--[if mso]></td></tr></table><![endif]-->
                                     <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 15px; padding-bottom: 10px; font-family: Arial, sans-serif"><![endif]-->
                                     <div style="color:#555555;font-family:Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height:150%;padding-top:15px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
                                         <div style="line-height: 18px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 12px; color: #555555;">
-                                            <p style="line-height: 25px; text-align: left; font-size: 12px; margin: 0;"><span style="font-size: 17px; mso-ansi-font-size: 18px;">Cliquez sur ce lien pour valider votre adresse e-mail : {{ link }}</span></p>
+                                            <p style="line-height: 25px; text-align: left; font-size: 12px; margin: 0;"><span style="font-size: 17px; mso-ansi-font-size: 18px;">Cliquez sur ce lien pour le mettre à jour  : {{ link }}</span></p>
                                         </div>
                                     </div>
                                     <!--[if mso]></td></tr></table><![endif]-->
